# polygon-wars

./: CMakeLists.txt  README.md  config.txt  main.cpp
src/: Common.hpp  Components.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Game.cpp  Game.hpp  Vec2.cpp  Vec2.hpp
